--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,9 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
+            "env": {
+                "CONFIG_SERVER" : "http://localhost/config"
+            },
             "program": "${workspaceFolder}/cmd/graphql/server.go"
         }
     ]
