--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,8 @@
             "request": "launch",
             "mode": "auto",
             "env": {
-                "CONFIG_SERVER" : "http://localhost/config"
+                "CONFIG_FILE": "${workspaceFolder}/config.json",
+                // "CONFIG_SERVER" : "http://localhost/config"
             },
             "program": "${workspaceFolder}/cmd/graphql/server.go"
         }
